--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "next": "^14.2.2",
+    "next-auth": "^4.24.11",
     "next-sanity": "^9.8.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "sanity": "^3.70.0",
+    "stripe": "^17.6.0",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
