--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@stripe/stripe-js": "^5.6.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "fs": "^0.0.1-security",
     "next": "^14.2.2",
     "next-auth": "^4.24.11",
     "next-sanity": "^9.8.38",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
